data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1608.wast
;; 9. **Test Description:**    - Execute a large `br_table` with hundreds of branch targets and an `unreachable` instruction affecting various index ranges.    - **Constraint:** Observes if large-scale `br_table` maintains `unreachable` trap integrity.    - **Relation to Edge Case:** Detects handling accuracy in extensive branch networks intersecting with `unreachable`.

(assert_invalid
  (module (func $large-br_table-unreachable
    (block
      (br_table 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
                1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
                1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
                (unreachable)
                (i32.const 0))
    )
  ))
  "type mismatch"
)